test/corpus/cascades.txt
================
object cascades
================

let obj = { x: 1, y: 2 }
obj.{ x: 3, y: 4 }
obj.{ x: 3, y: 4 }.x

let x = 123
let y = 456
obj.{ x, y }

obj.{
	x: 2,
}

obj.{ ...other, x: 123 }

object.{
	a: q,
	b.{
		w: 1,
	},
	arrayOrMap.[
		index: 1
	],
	c.{
		d: 1,
		e.{
			f: 1,
		},
	}
}

---

(program
    (constant_declaration
        (identifier)
        (object
            (pair (identifier) (number))
            (pair (identifier) (number))
        )
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (object_field
                (pair (identifier) (number))
                (pair (identifier) (number))
            )
        )
    )
    (expression_statement
        (member_expression
            (cascade_expression
                (identifier)
                (object_field
                    (pair (identifier) (number))
                    (pair (identifier) (number))
                )
            )
            (identifier)
        )
    )
    (constant_declaration
        (identifier)
        (number)
    )
    (constant_declaration
        (identifier)
        (number)
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (object_field
                (shorthand (identifier))
                (shorthand (identifier))
            )
        )
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (object_field
                (pair (identifier) (number))
            )
        )
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (object_field
                (spread_expression (identifier))
                (pair (identifier) (number))
            )
        )
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (object_field
                (pair (identifier) (identifier))
                (pair (identifier)
                    (object_field
                        (pair (identifier) (number))
                    )
                )
                (pair (identifier)
                    (map_field
                        (pair (identifier) (number))
                    )
                )
                (pair (identifier)
                    (object_field
                        (pair (identifier) (number))
                        (pair (identifier)
                            (object_field
                                (pair (identifier) (number))
                            )
                        )
                    )
                )
            )
        )
    )
)

================
array/map cascades
================

let array = [1, 2, 3]
array.[ 0: 1, 1: 2 ]
array.[
	0: 1,
	1: 2,
]

let index = 0
array.[ index: 1, index + 1: 2 ]
array.[ 0 ... array.length: 123 ]
array.[ 0 ... array.length: ...array ]
array.[ 0 ... array.length: for i in meta.length { i + 1 } ]

let map = ["key": "value", "one": "two"]
map.[
	"key": "value",
	("one" + "two"): "two",
]

---

(program
    (constant_declaration
        (identifier)
        (array (number) (number) (number))
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (map_field
                (pair (number) (number))
                (pair (number) (number))
            )
        )
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (map_field
                (pair (number) (number))
                (pair (number) (number))
            )
        )
    )
    (constant_declaration
        (identifier)
        (number)
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (map_field
                (pair (identifier) (number))
                (pair (binary_expression (identifier) (identifier)) (number))
            )
        )
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (map_field
                (pair (range_expression (number) (member_expression (identifier) (identifier))) (number))
            )
        )
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (map_field
                (pair (range_expression (number) (member_expression (identifier) (identifier))) (spread_expression (identifier)))
            )
        )
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (map_field
                (pair (range_expression (number) (member_expression (identifier) (identifier))) (for_expression
                    (for_binding (identifier))
                    (identifier)
                    (statement_block
                        (expression_statement (binary_expression (identifier) (number)))
                    )
                ))
            )
        )
    )
    (constant_declaration
        (identifier)
        (map
            (pair (string) (string))
            (pair (string) (string))
        )
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (map_field
                (pair (string) (string))
                (pair (parenthesized_expression (binary_expression (string) (string))) (string))
            )
        )
    )
)

================
index cascade assignment
================

let array = [1, 2, 3]
array.[ 0: 1, 1: 2 ]
array.[ index: 1, index + 1: 2 ]
array.[ 0 ... array.length: 123 ]
array.[ 0 ... array.length: ...array ]
array.[ 0 ... array.length: for i in meta.length { i + 1 } ]

// Updates the original array in-place
array.[ 0: 1, 1: 2 ].pop() == 2
array.[ 0: 1, 1: 2 ] == array

---

(program
    (constant_declaration
        (identifier)
        (array (number) (number) (number))
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (map_field
                (pair (number) (number))
                (pair (number) (number))
            )
        )
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (map_field
                (pair (identifier) (number))
                (pair (binary_expression (identifier) (identifier)) (number))
            )
        )
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (map_field
                (pair (range_expression (number) (member_expression (identifier) (identifier))) (number))
            )
        )
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (map_field
                (pair (range_expression (number) (member_expression (identifier) (identifier))) (spread_expression (identifier)))
            )
        )
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (map_field
                (pair (range_expression (number) (member_expression (identifier) (identifier))) (for_expression
                    (for_binding (identifier))
                    (identifier)
                    (statement_block
                        (expression_statement (binary_expression (identifier) (number)))
                    )
                ))
            )
        )
    )
    (line_comment)
    (expression_statement
        (binary_expression
            (call_expression
                (cascade_expression
                    (identifier)
                    (map_field
                        (pair (number) (number))
                        (pair (number) (number))
                    )
                )
                (identifier)
            )
            (==)
            (number)
        )
    )
    (expression_statement
        (binary_expression
            (cascade_expression
                (identifier)
                (map_field
                    (pair (number) (number))
                    (pair (number) (number))
                )
            )
            (==)
            (identifier)
        )
    )
)

================
map cascade assignment
================

let map = ["key": "value", "one": "two"]
map.[ "key": "value", "one": "two" ]
map.[
	"key": "value",
	("one" + "two"): "two",
]
map.[ index: 1 ] == map

---

(program
    (constant_declaration
        (identifier)
        (map
            (pair (string) (string))
            (pair (string) (string))
        )
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (map_field
                (pair (string) (string))
                (pair (string) (string))
            )
        )
    )
    (expression_statement
        (cascade_expression
            (identifier)
            (map_field
                (pair (string) (string))
                (pair (parenthesized_expression (binary_expression (string) (string))) (string))
            )
        )
    )
    (expression_statement
        (binary_expression
            (cascade_expression
                (identifier)
                (map_field
                    (pair (identifier) (number))
                )
            )
            (==)
            (identifier)
        )
    )
)
