test/corpus/class.txt
===========
Empty class
===========

class A {

}

---

(program
    (class_declaration (identifier) (statement_block))
)

======================
Class with inheritance
======================

class A B {

}

---

(program
    (class_declaration
        (identifier)
        (identifier)
        (statement_block)
    )
)

=====================
Class with interfaces
=====================

class A C D {

}

---

(program
    (class_declaration
        (identifier)
        (identifier)
        (identifier)
        (statement_block)
    )
)

======================================
Class with inheritrance and interfaces
======================================

class A B C {

}

---

(program
    (class_declaration
        (identifier)
        (identifier)
        (identifier)
        (statement_block)
    )
)

================
With simple body
================

class Hello {
    fun world(s String) Void {

    }
}

---

(program
    (class_declaration
        (identifier)
        (statement_block
            (function_declaration
                (identifier)
                (function_parameters
                    (identifier) (type_hint (identifier))
                )
                (type_hint  (identifier))
                (statement_block)
            )
        )
    )
)

====================
With class attributs
====================

@final
class World {

}

---

(program
    (class_declaration
        (decorator (decorator_name (identifier)))
        (identifier)
        (statement_block)
    )
)

===============
With annotation
===============

@excludeClass
class A {

}

---

(program
    (class_declaration
        (decorator (decorator_name (identifier)))
        (identifier)
        (statement_block)
    )
)

=========================
With mutliple annotations
=========================

@excludeClass
@excludeClass
private class A {

}

---

(program
    (class_declaration
        (decorator (decorator_name (identifier)))
        (decorator (decorator_name (identifier)))
        (property_attribut)
        (identifier)
        (statement_block)
    )
)
