test/corpus/comments.txt
=============
line_comments
=============

// Hello, world!
// Hello there, general Kenobi.

---

(program
    (line_comment)
    (line_comment)
)

==============
block_comments
==============

/* This is a block comment
such wow
amazing */

/* I am impressed
// by the block comments
capacities */

---

(program
    (block_comment)
    (block_comment)
)

================
nested block comments
================

/* Outer comment
   /* Inner nested comment
      /* Even deeper nested comment */
   */
   Still in outer comment
*/

---

(program
    (block_comment)
)
